--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -10,8 +10,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.virginiatech.piraj.hw5drawingapp.StartActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/takePicture"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:text="Start"
+            android:textSize="30dp"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
 </RelativeLayout>
