--- a/app/src/main/res/layout/activity_drawing.xml
+++ b/app/src/main/res/layout/activity_drawing.xml
@@ -10,10 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.virginiatech.piraj.hw5drawingapp.DrawingActivity">
 
-    <ImageView
-        android:id="@+id/testImageView"
+    <com.virginiatech.piraj.hw5drawingapp.DrawingCanvas
+        android:id="@+id/drawingCanvas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+    />
+
+
 
 
 </RelativeLayout>
